...
    <string name="status_retry_policy_saved">&#x81EA;&#x52A8;&#x91CD;&#x8BD5;&#x7B56;&#x7565;&#x5DF2;&#x4FDD;&#x5B58;&#xFF1A;%1$ss / %2$ss / %3$ss</string>
    <string name="status_robot_saved">&#x76EE;&#x6807;&#x673A;&#x5668;&#x4EBA;&#x5DF2;&#x4FDD;&#x5B58;&#xFF1A;%1$s</string>
    <string name="status_robot_duplicate">&#x76EE;&#x6807;&#x673A;&#x5668;&#x4EBA;&#x540D;&#x79F0;&#x5DF2;&#x5B58;&#x5728;&#xFF0C;&#x8BF7;&#x4F7F;&#x7528;&#x552F;&#x4E00;&#x540D;&#x79F0;&#x3002;</string>
    <string name="status_robot_save_failed">&#x76EE;&#x6807;&#x673A;&#x5668;&#x4EBA;&#x4FDD;&#x5B58;&#x5931;&#x8D25;&#x3002;</string>
    <string name="status_rule_saved">&#x53F7;&#x7801;&#x89C4;&#x5219;&#x5DF2;&#x4FDD;&#x5B58;&#xFF1A;%1$s</string>
    <string name="status_rule_duplicate">&#x8BE5;&#x53D1;&#x9001;&#x53F7;&#x7801;&#x5DF2;&#x7ECF;&#x5B58;&#x5728;&#x89C4;&#x5219;&#x3002;</string>
    <string name="status_rule_conflict">&#x8BE5;&#x89C4;&#x5219;&#x4F1A;&#x4E0E;&#x73B0;&#x6709;&#x89C4;&#x5219;&#xFF08;%1$s&#xFF09;&#x5339;&#x914D;&#x540C;&#x4E00;&#x53D1;&#x4EF6;&#x4EBA;&#xFF0C;&#x8BF7;&#x5408;&#x5E76;&#x6216;&#x5220;&#x9664;&#x5176;&#x4E00;&#x3002;</string>
    <string name="status_rule_save_failed">&#x53F7;&#x7801;&#x89C4;&#x5219;&#x4FDD;&#x5B58;&#x5931;&#x8D25;&#x3002;</string>
    <string name="status_retry_requested">&#x5DF2;&#x8BF7;&#x6C42;&#x91CD;&#x8BD5;&#x5931;&#x8D25;&#x8BB0;&#x5F55; #%1$d&#x3002;</string>
    <string name="status_simulation_enqueued">&#x5DF2;&#x52A0;&#x5165;&#x6A21;&#x62DF;&#x77ED;&#x4FE1;&#xFF0C;&#x53D1;&#x9001;&#x53F7;&#x7801;&#xFF1A;%1$s&#x3002;</string>
    <string name="notification_channel_name">&#x76D1;&#x63A7;&#x901A;&#x77E5;</string>
    <string name="notification_title">&#x77ED;&#x4FE1;&#x76D1;&#x63A7;&#x670D;&#x52A1;</string>
    <string name="notification_service_active">&#x76D1;&#x63A7;&#x524D;&#x53F0;&#x670D;&#x52A1;&#x6B63;&#x5728;&#x8FD0;&#x884C;&#x3002;</string>
...
